# sieci_bramek

./: .gitignore  CMakeLists.txt  LICENSE
src/: file_reader.c  file_reader.h  file_writer.c  file_writer.h  line_reader.c  line_reader.h  logic_gates.c  logic_gates.h  logical_circuit.c  logical_circuit.h  main.c  node.c  node.h
